--- a/user/html/signup.html
+++ b/user/html/signup.html
@@ -1477,19 +1477,42 @@
     // Google Sign Up Button Handler
     const googleSignupBtn = document.querySelector(".google-signup-btn");
     googleSignupBtn.addEventListener("click", function () {
-      const clientId =
-        "1002579907182-03h0l3s7dend47reghc4j805herork3l.apps.googleusercontent.com"; // Replace with your Client ID
-      const redirectUri =
-        "http://localhost:8080/user/php/google-callback.php";
-      const scope = "email profile";
+      // Show loading state
+      this.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Loading...';
+      this.disabled = true;
+      
+      // Fetch Google config from server
+      fetch('../php/get-google-config.php')
+        .then(response => {
+          if (!response.ok) {
+            throw new Error('Failed to fetch configuration');
+          }
+          return response.json();
+        })
+        .then(config => {
+          const clientId = config.clientId;
+          const redirectUri = config.redirectUri;
+          const scope = 'email profile';
 
-      const googleAuthUrl = `https://accounts.google.com/o/oauth2/v2/auth?client_id=${clientId}&redirect_uri=${encodeURIComponent(
-        redirectUri
-      )}&response_type=code&scope=${encodeURIComponent(
-        scope
-      )}&access_type=offline&prompt=consent`;
+          const googleAuthUrl = `https://accounts.google.com/o/oauth2/v2/auth?` +
+            `client_id=${encodeURIComponent(clientId)}` +
+            `&redirect_uri=${encodeURIComponent(redirectUri)}` +
+            `&response_type=code` +
+            `&scope=${encodeURIComponent(scope)}` +
+            `&access_type=offline` +
+            `&state=signup` +
+            `&prompt=consent`;
 
-      window.location.href = googleAuthUrl;
+          console.log('Redirecting to:', googleAuthUrl);
+          window.location.href = googleAuthUrl;
+        })
+        .catch(error => {
+          console.error('Error:', error);
+          alert('Failed to initialize Google Sign-Up. Please try again.');
+          // Restore button
+          this.innerHTML = '<i class="bi bi-google"></i> Sign up with Google';
+          this.disabled = false;
+        });
     });
   </script>
   <div id="toast" class="toast"></div>
