--- a/admin/html/order-transactions.html
+++ b/admin/html/order-transactions.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
 
+  <script src="../js/admin-session.js"></script>
   <style>
     :root {
       --primary-pink: #e497aa;
@@ -776,7 +777,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
+   document.addEventListener('DOMContentLoaded', async function () {
+  // First, verify admin session
+  setupAdminPageProtection();
+  currentAdmin = await fetchAdminSession();
+  if (!currentAdmin) return;
+
+  await updateAdminGreeting();
+
       // Load order data
       loadOrderData('all', '', 1);
 
