--- a/admin/html/activity-log.html
+++ b/admin/html/activity-log.html
@@ -824,7 +824,7 @@
       <nav class="col-md-2 d-md-block sidebar" id="sidebar">
         <div class="logo-container">
           <a href="admin.html">
-            <img src="../images/mainlogo.png" alt="Store Logo" class="logo" />
+            <img src="../images/mainlogo1.png" alt="Store Logo" class="logo" />
           </a>
           <div class="store-name">Blessence</div>
         </div>
@@ -963,7 +963,7 @@
   <div class="cashier-mode-entry" id="cashierModeEntry">
     <div class="cashier-logo-container">
       <div class="cashier-logo">
-        <img src="../images/mainlogo.png" alt="Store Logo">
+        <img src="../images/mainlogo1.png" alt="Store Logo">
       </div>
       <div class="cashier-title">Entering Cashier Mode</div>
       <div class="cashier-subtitle">Blessence Point of Sale</div>
