--- a/admin/html/admin.html
+++ b/admin/html/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Admin Dashboard - Blessence</title>
-    <link rel="icon" href="../images/mainlogo.png" type="image/png" />
+    <link rel="icon" href="../images/mainlogo1.png" type="image/png" />
 
     <!-- External Stylesheets -->
     <link rel="stylesheet" href="../styles/styles.css" />
@@ -935,7 +935,7 @@
           <i class="fas fa-bars"></i>
         </button>
         <a href="admin.html" class="mobile-logo"
-          ><img src="../images/mainlogo.png" alt="Store Logo"
+          ><img src="../images/mainlogo1.png" alt="Store Logo"
         /></a>
       </div>
     </div>
@@ -949,7 +949,7 @@
         <nav class="col-md-2 d-md-block sidebar" id="sidebar">
           <div class="logo-container">
             <a href="admin.html"
-              ><img src="../images/mainlogo.png" alt="Store Logo" class="logo"
+              ><img src="../images/mainlogo1.png" alt="Store Logo" class="logo"
             /></a>
             <div class="store-name">Blessence</div>
           </div>
@@ -1344,7 +1344,7 @@
     <div class="cashier-mode-entry" id="cashierModeEntry">
       <div class="cashier-logo-container">
         <div class="cashier-logo">
-          <img src="../images/mainlogo.png" alt="Store Logo" />
+          <img src="../images/mainlogo1.png" alt="Store Logo" />
         </div>
         <div class="cashier-title">Entering Cashier Mode</div>
         <div class="cashier-subtitle">Blessence Point of Sale</div>
