--- a/admin/html/customer-managemnet.html
+++ b/admin/html/customer-managemnet.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Customer Management - Blessence</title>
-    <link rel="icon" href="../images/mainlogo.png" type="image/png" />
+    <link rel="icon" href="../images/mainlogo1.png" type="image/png" />
 
     <link rel="stylesheet" href="../styles/styles.css" />
 
@@ -925,7 +925,7 @@
           <i class="fas fa-bars"></i>
         </button>
         <div class="mobile-logo">
-          <img src="../images/mainlogo.png" alt="Store Logo" />
+          <img src="../images/mainlogo1.png" alt="Store Logo" />
         </div>
       </div>
     </div>
@@ -939,7 +939,11 @@
         <nav class="col-md-2 d-md-block sidebar" id="sidebar">
           <div class="logo-container">
             <a href="admin.html">
-              <img src="../images/mainlogo.png" alt="Store Logo" class="logo" />
+              <img
+                src="../images/mainlogo1.png"
+                alt="Store Logo"
+                class="logo"
+              />
             </a>
             <div class="store-name">Blessence</div>
           </div>
@@ -1314,7 +1318,7 @@
     <div class="cashier-mode-entry" id="cashierModeEntry">
       <div class="cashier-logo-container">
         <div class="cashier-logo">
-          <img src="../images/mainlogo.png" alt="Store Logo" />
+          <img src="../images/mainlogo1.png" alt="Store Logo" />
         </div>
         <div class="cashier-title">Entering Cashier Mode</div>
         <div class="cashier-subtitle">Blessence Point of Sale</div>
