--- a/user/html/signup.html
+++ b/user/html/signup.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Blessence| Sign Up</title>
-  <link rel="icon" href="../../admin/images/mainlogo.png" type="image/png">
+  <link rel="icon" href="../../admin/images/mainlogo1.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link
     href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600&display=swap"
