--- a/user/html/try-on.html
+++ b/user/html/try-on.html
@@ -3759,14 +3759,13 @@
             );
           }
 
-          const response = await fetch("/user/php/lipstick_analysis", {
-              method: "POST",
-              headers: {
-                "Content-Type": "application/json",
-              },
-              body: JSON.stringify(payload),
-            }
-          );
+          const response = await fetch("/user/php/analyze-lipstick-proxy.php", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+            },
+            body: JSON.stringify(payload),
+          });
 
           if (!response.ok) {
             console.error(
